created travel POST route and its validation and logical business.